--- a/styles/diseño.css
+++ b/styles/diseño.css
@@ -201,3 +201,22 @@ section {
     color: #444;
   }
   
+  #modo-toggle-container button {
+    background-color: #007bff;
+    color: white;
+    padding: 6px 12px;
+    border: none;
+    border-radius: 4px;
+    font-weight: bold;
+  }
+  
+  #modo-toggle-container span {
+    font-size: 28px;
+    transition: transform 0.2s ease;
+  }
+  
+  #modo-toggle-container span:hover {
+    transform: scale(1.2);
+  }
+  
+  
